# DZZ_C-

./: CMakeLists.txt  DCT.cpp  DCT.h  Distort.h  Filters.h  ImageOperations.cpp  ImageOperations.h  ImageQM.cpp  ImageQM.h  main.cpp  utils.h
CudaOper/: SimplyFilters.cpp  SimplyFilters.h  main.cpp
